@@ -36,7 +36,7 @@ if DATABASE
 DB_SRCES=dbconnect.cc SQLerror_postgres.cc Transaction.cc Query.cc \
 	Event.cc Global_Settings_db.cc dbconnect_shared.cc \
 	FetchIStream_common.cc SQLerror_sqlite.cc ExtraColumns.cc \
-	Transaction_sqlite.cc
+	Transaction_sqlite.cc pg_type.cc
 else 
 DB_SRCES=
 endif
